--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body class="not-loaded">
+    <div class="bee-container">
+        <img src="./assets/bee.gif" style="width:48px;height:48px;" />
+    </div>
+
     <div class="night"></div>
     <div class="flowers">
         <div class="flower flower--1">
