--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="not-loaded">
     <div class="bee-container">
-        <img src="./assets/bee.gif" style="width:48px;height:48px;" />
+        <img src="./assets/bee.gif" style="width:1.5rem;height:1.5rem;" />
     </div>
 
     <div class="night"></div>
